--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,37 @@
 /* Body */
-body:before{
-    content: "";
-    display: block;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -10;
-    background: url(../image/background.jpg) no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(../image/background.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-body{
-    background-color: #f4f4f4;
-    color: #555;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16;
-    line-height: 1.6em;
-    margin: 0;
-    display: block;
+body {
+  background-color: #f4f4f4;
+  color: #555;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16;
+  line-height: 1.6em;
+  margin: 0;
+  display: block;
 
-    /* z-index: -1;
+  /* z-index: -1;
     position: fixed;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%; */
 
-    /* background: url(../image/background.jpg) no-repeat center center;
+  /* background: url(../image/background.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -39,185 +39,179 @@ body{
 }
 
 /* Container */
-.container{
-    width: 80%;
-    margin: auto;
-    overflow: hidden;
+.container {
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
 }
 
 /* Main Header */
-#main-header{
-    background-color: black;
-    color: white;
-    font-family: 'Raleway', sans-serif;
-    letter-spacing: 3px;
-    font-size: larger;
-    font-weight: 700;
-    line-height: 1.8em;
+#main-header {
+  background-color: black;
+  color: white;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 3px;
+  font-size: larger;
+  font-weight: 700;
+  line-height: 1.8em;
 }
 
 /* Navigation Bar */
-#nav-bar{
-    background-color: #333;
-    color: white;
-
+#nav-bar {
+  background-color: #333;
+  color: white;
 }
 
-#nav-bar ul{
-    padding: 0;
-    list-style: none;
+#nav-bar ul {
+  padding: 0;
+  list-style: none;
 }
 
-#nav-bar li{
-    display: inline;
+#nav-bar li {
+  display: inline;
 }
 
-#nav-bar a{
-    color: white;
-    text-decoration: none;
-    font-size: 20;
-    padding-right: 20px;
-    font-weight: 400;
-    font-family: 'Raleway', sans-serif;
+#nav-bar a {
+  color: white;
+  text-decoration: none;
+  font-size: 20;
+  padding-right: 20px;
+  font-weight: 400;
+  font-family: "Raleway", sans-serif;
 }
 
-#nav-bar a:hover{
-    color: turquoise;
-    /* color: red; */
+#nav-bar a:hover {
+  color: turquoise;
+  /* color: red; */
 }
 
 /* Disable user select */
 .disabled {
-    user-select: none;
-    -webkit-user-select: none; /*Safari*/
-    -moz-user-select: none; /*Firefox*/
-  }
+  user-select: none;
+  -webkit-user-select: none; /*Safari*/
+  -moz-user-select: none; /*Firefox*/
+}
 
 /* Section - Padding for each section */
-section{
-padding-top: 30px;
+section {
+  padding-top: 30px;
 }
 
 /* Frosted glass look for each div */
-.frosted-glass{
-    position: relative;
-    width: 80%;
-    margin: auto;
-    background: inherit;
-    border-radius: 5px;
-    overflow: hidden;
+.frosted-glass {
+  position: relative;
+  width: 80%;
+  margin: auto;
+  background: inherit;
+  border-radius: 5px;
+  overflow: hidden;
 }
-  
-.frosted-glass:before{
-    content: '';
-    width: 100%;
-    height: 100%;
-    background: inherit; 
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    box-shadow: inset 0 0 0 200px rgba(109, 109, 109, 0.6);
-    /* box-shadow: inset 0 0 0 200px rgba(255,255,255,0.4); */
-    filter: blur(60px);
+
+.frosted-glass:before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  box-shadow: inset 0 0 0 200px rgba(109, 109, 109, 0.6);
+  /* box-shadow: inset 0 0 0 200px rgba(255,255,255,0.4); */
+  filter: blur(60px);
 }
 
 /* Text to complement Frosted glass */
-.box-text{
-    position: inherit;
-    color: white;
-    margin: 20px;
-    font-family: 'Arial', sans-serif;
+.box-text {
+  position: inherit;
+  color: white;
+  margin: 20px;
+  font-family: "Arial", sans-serif;
 }
 
-.box-text h1{
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 2px;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 1em;
+.box-text h1 {
+  font-family: "Arial", sans-serif;
+  letter-spacing: 2px;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 1em;
 }
 
-.h1-underline-turquoise{
-    text-decoration: underline;
-    text-decoration-color: turquoise;
-
+.h1-underline-turquoise {
+  text-decoration: underline;
+  text-decoration-color: turquoise;
 }
 
-.box-text .warning{
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 1px;
-    font-size: 25px;
-    font-weight: 700;
-    color: turquoise;
+.box-text .warning {
+  font-family: "Arial", sans-serif;
+  letter-spacing: 1px;
+  font-size: 25px;
+  font-weight: 700;
+  color: turquoise;
 }
 
-.box-text p{
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 1px;
-    font-size: 18px;
-    font-weight: 100;
-    line-height: 1.6em;
+.box-text p {
+  font-family: "Arial", sans-serif;
+  letter-spacing: 1px;
+  font-size: 18px;
+  font-weight: 100;
+  line-height: 1.6em;
 }
 
-.box-text a, .projects-remarks a{
-    text-decoration: none;
-    color: turquoise;
+.box-text a,
+.projects-remarks a {
+  text-decoration: none;
+  color: turquoise;
 }
 
-.box-text a:hover, .projects-remarks a:hover{
-    color: red;
+.box-text a:hover,
+.projects-remarks a:hover {
+  color: red;
 }
 
 /* FAQ Question */
-.box-text .faq-question{
-    color: turquoise;
+.box-text .faq-question {
+  color: turquoise;
 }
 
 /* FAQ Answer */
-.box-text .faq-answer{
-    color: red;
+.box-text .faq-answer {
+  color: red;
 }
 
 /* Experience list settings */
-.achievements ul, 
-.experience-list ul
-{
-    list-style: none;
-    padding: 0;
+.achievements ul,
+.experience-list ul {
+  list-style: none;
+  padding: 0;
 }
 .achievements li,
-.experience-list li
-{
-    padding-left: 1.3em;
-    letter-spacing: 1px;
-    font-size: 20px;
-    font-weight: 100;
-    line-height: 2em;
-
+.experience-list li {
+  padding-left: 1.3em;
+  letter-spacing: 1px;
+  font-size: 20px;
+  font-weight: 100;
+  line-height: 2em;
 }
 
 .achievements li:before,
-.experience-list li:before
-{
-    content: "\f058"; /* FontAwesome Unicode */
-    font-family: FontAwesome;
-    display: inline-block;
-    margin-left: -1.3em; /* same as padding-left set on li */
-    width: 1.3em; /* same as padding-left set on li */
+.experience-list li:before {
+  content: "\f058"; /* FontAwesome Unicode */
+  font-family: FontAwesome;
+  display: inline-block;
+  margin-left: -1.3em; /* same as padding-left set on li */
+  width: 1.3em; /* same as padding-left set on li */
 }
 
 .achievements li:nth-child(even),
-.experience-list li:nth-child(even)
-{
-    color: turquoise;
+.experience-list li:nth-child(even) {
+  color: turquoise;
 }
 
-
 /* Education h1 turquoise color */
-.education h1{
-    color: turquoise;
+.education h1 {
+  color: turquoise;
 }
 
 /* Outline of each letter - used along with text above */
@@ -226,79 +220,78 @@ padding-top: 30px;
 } */
 
 /* Grey Box */
-.grey-box{
-    width: 80%;
-    margin: auto;
-    background-color: #333;
-    overflow: hidden;
-    
+.grey-box {
+  width: 80%;
+  margin: auto;
+  background-color: #333;
+  overflow: hidden;
 }
 
 /* Accordion - Referenced from w3schools.com */
 /* Style the buttons that are used to open and close the accordion panel */
-.accordion{
-    background-color: rgba(255, 255, 255, 0.6);
-    color: black;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-    position: relative;
+.accordion {
+  background-color: rgba(255, 255, 255, 0.6);
+  color: black;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  position: relative;
 
-    /* Font for Accordion */
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 1px;
-    font-size: 20px;
-    font-weight: 700;
-    text-align: left;
+  /* Font for Accordion */
+  font-family: "Arial", sans-serif;
+  letter-spacing: 1px;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: left;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover{
-    background-color: rgba(64, 224, 208, 0.8);
+.active,
+.accordion:hover {
+  background-color: rgba(64, 224, 208, 0.8);
 }
 
-.accordion-white-border{
-    border: 1px solid white;
+.accordion-white-border {
+  border: 1px solid white;
 }
 
 /* Symbol Right side */
-.accordion .fa{
-    float: right;
+.accordion .fa {
+  float: right;
 }
 
 .accordion .fa-discord,
 .accordion .fa-envelope,
 .accordion .fa-github,
-.accordion .fa-linkedin
-{
-    float: left;
+.accordion .fa-linkedin {
+  float: left;
 }
 
-.accordion #accordion-text-discord{
-    position: absolute;
-    padding-top: 1px;
-    padding-left: 20px;
+.accordion #accordion-text-discord {
+  position: absolute;
+  padding-top: 1px;
+  padding-left: 20px;
 }
 
-.accordion #accordion-text-email{
-    position: absolute;
-    padding-top: 1px;
-    padding-left: 25px;
+.accordion #accordion-text-email {
+  position: absolute;
+  padding-top: 1px;
+  padding-left: 25px;
 }
 
-.accordion #accordion-text-github{
-    position: absolute;
-    padding-top: 1px;
-    padding-left: 25px;
+.accordion #accordion-text-github {
+  position: absolute;
+  padding-top: 1px;
+  padding-left: 25px;
 }
 
-.accordion #accordion-text-linkedin{
-    position: absolute;
-    padding-top: 1px;
-    padding-left: 27px;
+.accordion #accordion-text-linkedin {
+  position: absolute;
+  padding-top: 1px;
+  padding-left: 27px;
 }
 
 /* .accordion:after {
@@ -315,253 +308,241 @@ padding-top: 30px;
   .active:after {
     content: '\f054';
   } */
-  
-/* Style the accordion panel. Note: hidden by default */
-.panel{
-    padding: 0 18px;
-    background-color: rgba(0, 0, 0, 0.6);
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-  }
 
-.panel p{
-    color: turquoise;
-    text-decoration: none;
-    font-size: 19px;
-    font-weight: 100;
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 1px;
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: rgba(0, 0, 0, 0.6);
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.panel p {
+  color: turquoise;
+  text-decoration: none;
+  font-size: 19px;
+  font-weight: 100;
+  font-family: "Arial", sans-serif;
+  letter-spacing: 1px;
 }
 
 /* Panel a settings */
-.panel a{
-    color: turquoise;
-    text-decoration: none;
-    font-size: 19px;
-    font-weight: 100;
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 1px;
+.panel a {
+  color: turquoise;
+  text-decoration: none;
+  font-size: 19px;
+  font-weight: 100;
+  font-family: "Arial", sans-serif;
+  letter-spacing: 1px;
 }
 
-.panel a:hover{
-    color: red;
-    /* text-decoration: underline; */
+.panel a:hover {
+  color: red;
+  /* text-decoration: underline; */
 }
 
 /* panel settings for projects and experience*/
 .panel-projects,
-.panel-experience
-{
-    padding: 0;
-    background-color: rgba(0, 0, 0, 0);
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
+.panel-experience {
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0);
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
 }
-
 
 /* Skills table */
-.skills-header-turquoise{
-    color: turquoise;
+.skills-header-turquoise {
+  color: turquoise;
 }
 
-.skils-table-overflow{
-    overflow-x: auto;
+.skils-table-overflow {
+  overflow-x: auto;
 }
 
-#skills-table{
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-    /* table-layout: fixed; */
-}
-  
-#skills-table td, #skills-table th{
-    border: 1px solid white;
-    padding: 8px;
-    color: black;
-    text-decoration: none;
-    font-size: 19px;
-    font-weight: 100;
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 1px;
-    width: 25%;
-    text-align: center;
-    overflow: hidden;
-    /* white-space: nowrap; */
-
-    background-color: rgba(255, 255, 255, 0.6);
-    transition: 0.2s;
+#skills-table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  /* table-layout: fixed; */
 }
 
-#skills-table td:hover{
-    background-color: rgba(0, 0, 0, 0.6);
-    color: turquoise;
+#skills-table td,
+#skills-table th {
+  border: 1px solid white;
+  padding: 8px;
+  color: black;
+  text-decoration: none;
+  font-size: 19px;
+  font-weight: 100;
+  font-family: "Arial", sans-serif;
+  letter-spacing: 1px;
+  width: 25%;
+  text-align: center;
+  overflow: hidden;
+  /* white-space: nowrap; */
+
+  background-color: rgba(255, 255, 255, 0.6);
+  transition: 0.2s;
+}
+
+#skills-table td:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: turquoise;
 }
 
 /* Achievements, Projects and Experience tables*/
 .projects-table,
 .experience-table,
 .achievements-table,
-.experience-table-list
-{
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-    table-layout: fixed ;
+.experience-table-list {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  table-layout: fixed;
 }
 
 .projects-table td,
 .experience-table td,
 .achievements-table td,
-.experience-table-list td
-{
-    border: 1px solid white;
-    padding: 8px;
-    color: black;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 100;
-    font-family: 'Arial', sans-serif;
-    letter-spacing: 1px;
-    text-align: left;
-    
+.experience-table-list td {
+  border: 1px solid white;
+  padding: 8px;
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 100;
+  font-family: "Arial", sans-serif;
+  letter-spacing: 1px;
+  text-align: left;
 
-    background-color: rgba(255, 255, 255, 0.6);
-    transition: 0.2s;
+  background-color: rgba(255, 255, 255, 0.6);
+  transition: 0.2s;
 }
 
 .projects-table tr td:first-child,
-.experience-table tr td:first-child
-{
-    width: 6em;
-    min-width: 6em;
-    max-width: 6em;
-    word-break: break-all;
-    font-weight: 700;
-    text-align: center;
+.experience-table tr td:first-child {
+  width: 6em;
+  min-width: 6em;
+  max-width: 6em;
+  word-break: break-all;
+  font-weight: 700;
+  text-align: center;
 }
 
 .projects-table ul,
-.experience-table ul
-{
-    list-style-type: square;
+.experience-table ul {
+  list-style-type: square;
 }
 
 .projects-table li,
-.experience-table li
-{
-    letter-spacing: 1px;
-    font-weight: 100;
-    line-height: 2em;
+.experience-table li {
+  letter-spacing: 1px;
+  font-weight: 100;
+  line-height: 2em;
 }
 
 .projects-table:hover tr td,
-.experience-table:hover tr td
-{
-    background-color: rgba(0, 0, 0, 0.6);
-    color: white;
+.experience-table:hover tr td {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
 }
 
 .projects-table:hover tr td:first-child,
-.experience-table:hover tr td:first-child
-{
-    color: turquoise;
+.experience-table:hover tr td:first-child {
+  color: turquoise;
 }
 
 .projects-table tr .projects-remarks,
-.experience-table tr .experience-remarks
-{
-    line-height: 1.6em;
+.experience-table tr .experience-remarks {
+  line-height: 1.6em;
 }
 
 .achievements-table tr td:hover,
-.experience-table-list tr td:hover
-{
-    background-color: rgba(0, 0, 0, 0.6);
-    color: white;
+.experience-table-list tr td:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
 }
 
-.projects-personal{
-    padding-bottom: 1px;
+.projects-personal {
+  padding-bottom: 1px;
 }
 
-.experience-table-list tr td:hover .fa-check-circle{
-    color: greenyellow;
+.experience-table-list tr td:hover .fa-check-circle {
+  color: greenyellow;
 }
 
 /* Fixed buttons */
 #myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: turquoise; /* Set a background color */
-    color: black; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 5px; /* Rounded corners */
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: turquoise; /* Set a background color */
+  color: black; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
 
-    font-size: 18px; /* Increase font size */
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-  }
-  
-#myBtn:hover {
-    background-color: red; /* Add a dark-grey background on hover */
-    color: white;
+  font-size: 18px; /* Increase font size */
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
 }
 
+#myBtn:hover {
+  background-color: red; /* Add a dark-grey background on hover */
+  color: white;
+}
 
 /* Changelog class */
-.changelog{
-    position: relative;
-    color: white;
-    margin: 20px;
-    font-family: 'Arial', sans-serif;
-    line-height: 1em;
+.changelog {
+  position: relative;
+  color: white;
+  margin: 20px;
+  font-family: "Arial", sans-serif;
+  line-height: 1em;
 }
 
-.changelog h2{
-    font-size: 40px;
-    font-weight: 700;
-    letter-spacing: 2px;
-    text-decoration: underline;
-    text-decoration-color: turquoise;
+.changelog h2 {
+  font-size: 40px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-decoration: underline;
+  text-decoration-color: turquoise;
 }
 
-.changelog h3{
-    font-size: 30px;
-    color: turquoise;
-    font-family: 'Arial', sans-serif;
+.changelog h3 {
+  font-size: 30px;
+  color: turquoise;
+  font-family: "Arial", sans-serif;
 }
 
-.changelog ul{
-    list-style-type: square;
+.changelog ul {
+  list-style-type: square;
 }
 
-.changelog li{
-    letter-spacing: 1px;
-    font-size: 15px;
-    font-weight: 100;
-    line-height: 2em;
+.changelog li {
+  letter-spacing: 1px;
+  font-size: 15px;
+  font-weight: 100;
+  line-height: 2em;
 }
 
-.changelog-remark{
-    font-size: 18px;
-    color: turquoise;
-    font-family: 'Arial', sans-serif;
-    line-height: 1.6em;
+.changelog-remark {
+  font-size: 18px;
+  color: turquoise;
+  font-family: "Arial", sans-serif;
+  line-height: 1.6em;
 }
 
 .changelog p {
-    letter-spacing: 1px;
-    font-size: 18px;
-    font-weight: 100;
-    font-family: 'Arial', sans-serif;
-    line-height: 1.6em;
+  letter-spacing: 1px;
+  font-size: 18px;
+  font-weight: 100;
+  font-family: "Arial", sans-serif;
+  line-height: 1.6em;
 }
